--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "style-loader": "^0.12.3",
     "vue-router": "^0.5.2",
     "webpack": "^1.12.0",
-    "xr": "^0.1.13"
+    "xr": "^0.1.13",
+    "vue": "~0.12.12",
+    "lodash": "~3.10.1",
+    "store": "~1.3.17"
   },
   "devDependencies": {
     "babel-core": "^5.8.23",
